# praxisprojekt

./: .gitignore
Dokumentation/: literatur.bib  notizen.org  praxisprojekt.org  stash.org
Dokumentation/bilder/diagramme/: diagramme.cabal  stack.yaml
Dokumentation/bilder/diagramme/app/: Main.hs
Dokumentation/bilder/diagramme/src/: Architektur.hs  Infrastruktur.hs
buildtainer/: Dockerfile  docker-build.sh
haskell-producer/: haskell-producer.cabal  stack.yaml
haskell-producer/producer/: Main.hs
haskell-producer/src/: Model.hs  Util.hs
haskell-proto/: haskell-proto.cabal
haskell-proto/src/: Model1.hs
haskell-proto/src/Kafkaproto/: Entity.hs  Message.hs  Util.hs
kafka-docker/: docker-compose-single-broker.yml  docker-compose.yml
produktservice/: produktservice.cabal  stack.yaml
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/flag-cache/: QuickCheck-2.8.1-29722fe85bb2c9208f0ea6b42ddef1cc  StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  adjunctions-4.3-8f9869728347f254cedb13a4a2370c8c  aeson-0.9.0.1-93ef199727abea8507a13d75fc215199  alex-3.1.7  attoparsec-0.13.0.1-978b631d99d840db87166213f35fd6c8  base-orphans-0.5.4-43f3d27c7bf4b3afcb3d01a72ca02a01  bifunctors-5.2-07d856ecf8311e0f9f63d1f5ddc6dd1b  c2hs-0.27.1  comonad-4.2.7.2-b882ffbef00811fa45a678c4386f5fa7  contravariant-1.4-c217e5b14fb24fbaeb4b5c18a63e2409  cryptonite-0.10-7f83e6c8c542e98418678ba01b36b51a  distributive-0.5.0.2-ca734258e9247e6d7246f9d17632fc2c  dlist-0.7.1.2-220d0c7d28c858a7c7c383616eebf3ec  exceptions-0.8.2.1-08ed62d2282590eb80eba3e5c42a5f4e  free-4.12.4-bc576c22eea6865ba5bb8c8554c17a30  happy-1.19.5  hashable-1.2.4.0-7550865fa2a6bb3193b4e312352713f7  haskakafka-1.0.0-59390bc65183f1524c4174770a811cfb  haskell-proto-0.1.0.0-467d144dc22302f77e820ce46d23f861  kan-extensions-4.2.3-ac26132578a0a2566c2b510d8cb1e034  language-c-0.4.7-ef8d15f586a312c643e1c2d2c27f43bc  lens-4.13-b25a224ce266c5fc2b04c05c0c6f5a11  memory-0.11-af13c45b030fe26f2ea191c0b5b2d51f  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  network-info-0.2.0.8-0631f992e1e4290dc8dfc89207ad80ea  parallel-3.2.1.0-a8b9822e86c6a94393499110f2f6f93e  prelude-extras-0.4.0.3-35d27727606bcd0bcd2c3491f65bf5b7  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  produktservice-0.1.0.0-67ecb01e0d0c1407e73521d0d592b347  produktservice-0.1.0.0-f0fc6140946eeaf25f415e75cf1b78d5  profunctors-5.2-f8b0c78db6e37348c5152d0210123d5e  random-1.1-bddd14dad36e804462e2232164520f8f  reflection-2.1.2-a1800076486d650159694cb5f635481f  scientific-0.3.4.6-231fe2dae16ddf33db193ed40eaed096  semigroupoids-5.0.1-14796eba950bf368768cb160ae29ee08  semigroups-0.18.1-859f9a35cd4c616898b7ab7d46d08e5a  stm-2.4.4.1-7050c728ed5b2315e2c6b56d8bf9837f  syb-0.6-d154b8ffa473f7cfcfc32ca4d99f62f7  tagged-0.8.3-f6d46f07abee4dbbfbebc9d699423d2b  (+9 more)
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/haskakafka-1.0.0-JJRx26GGc976rsi6E8rX1H/: Haskakafka.dyn_hi  Haskakafka.hi  libHShaskakafka-1.0.0-JJRx26GGc976rsi6E8rX1H-ghc7.10.3.dylib
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/haskakafka-1.0.0-JJRx26GGc976rsi6E8rX1H/Haskakafka/: Example.dyn_hi  Example.hi  InternalRdKafka.dyn_hi  InternalRdKafka.hi  InternalRdKafkaEnum.dyn_hi  InternalRdKafkaEnum.hi  InternalSetup.dyn_hi  InternalSetup.hi  InternalTypes.dyn_hi  InternalTypes.hi
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/haskell-proto-0.1.0.0-4sL3VM5mwAC7UYD12QUVyu/: libHShaskell-proto-0.1.0.0-4sL3VM5mwAC7UYD12QUVyu-ghc7.10.3.dylib
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/haskell-proto-0.1.0.0-4sL3VM5mwAC7UYD12QUVyu/Kafkaproto/: Entity.dyn_hi  Entity.hi  Message.dyn_hi  Message.hi  Util.dyn_hi  Util.hi
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/produktservice-0.1.0.0-803HjeLBay40cXjedxxAzX/: Model.dyn_hi  Model.hi  libHSproduktservice-0.1.0.0-803HjeLBay40cXjedxxAzX-ghc7.10.3.dylib
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/produktservice-0.1.0.0-80p7D0JC9UF464h9M4qqf7/: Model.dyn_hi  Model.hi  libHSproduktservice-0.1.0.0-80p7D0JC9UF464h9M4qqf7-ghc7.10.3.dylib
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/produktservice-0.1.0.0-CwcYFBKHmbc8VbQdZKYEAl/: Model.dyn_hi  Model.hi
produktservice/.stack-work/install/x86_64-osx/lts-5.13/7.10.3/pkgdb/: haskakafka-1.0.0-59390bc65183f1524c4174770a811cfb.conf  haskell-proto-0.1.0.0-7db73b7d6bcebc3cc3ac78f9b019afd0.conf  package.cache
produktservice/app/: Main.hs
produktservice/src/: Model.hs
produktservice/src/Common/: Entity.hs  Message.hs
runtainer/: Dockerfile  docker-build.sh
warenkorbservice/: stack.yaml  warenkorbservice.cabal
warenkorbservice/app/: Main.hs
warenkorbservice/src/: Model.hs
warenkorbservice/src/Common/: Util.hs
