name:                haskell-producer
version:             0.1.0.0
synopsis:            Microservices that like to talk with Apache Kafka
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-producer#readme
license:             BSD3
license-file:        LICENSE
author:              Christoph Hegemann
maintainer:          christoph.hegemann@rewe-digital.com
copyright:           2016 Christoph Hegemann
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Model
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , lens
                     , aeson
                     , text
                     , time
                     , uuid
                     , random
                     , QuickCheck
 default-language:    Haskell2010

executable hs-producer
  hs-source-dirs:      producer
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , haskell-producer
                     , haskakafka
                     , bytestring
    , pretty-show
  default-language:    Haskell2010

test-suite haskell-producer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-producer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kritzcreek/praxisprojekt
