name:                haskell-proto
version:             0.1.0.0
synopsis:            Microservices that like to talk with Apache Kafka
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-producer#readme
license:             BSD3
license-file:        LICENSE
author:              Christoph Hegemann
maintainer:          christoph.hegemann@rewe-digital.com
copyright:           2016 Christoph Hegemann
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Kafkaproto.Message
                   , Kafkaproto.Entity
                   , Kafkaproto.Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , lens
                     , aeson
                     , text
                     , time
                     , uuid
                     , random
                     , QuickCheck
 default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kritzcreek/praxisprojekt
