name:                warenkorbservice
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/produktservice#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model
                     , Common.Entity
                     , Common.Message
                     , Common.Util
  build-depends:       base >= 4.7 && < 5
                     , time
                     , aeson
                     , text
                     , lens
                     , uuid
                     , random
                     , QuickCheck
  default-language:    Haskell2010

executable warenkorbservice
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , warenkorbservice
                     , haskakafka
                     , bytestring
                     , aeson
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/produktservice
