name:                diagramme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/diagramme#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Infrastruktur
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-lib
                     , SVGFonts
  default-language:    Haskell2010

executable diagramme
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , diagramme
                     , diagrams
                     , diagrams-lib
                     , diagrams-postscript
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/diagramme
